[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Menus/MenuFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Game/Menus/Hud/Hud.gd" type="Script" id=2]
[ext_resource path="res://Game/Players/Characters/Players/Cameras/cross.png" type="Texture" id=3]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 637.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FPSCounter" type="Label" parent="HBoxContainer/LeftContainer"]
margin_right = 637.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.756863, 0, 1, 1 )
text = "60"

[node name="MidContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthContainer" type="VBoxContainer" parent="HBoxContainer/RightContainer"]
margin_right = 638.0
margin_bottom = 538.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthLabel" type="Label" parent="HBoxContainer/RightContainer/HealthContainer"]
margin_right = 638.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.756863, 0, 1, 1 )
text = "Health: 100"
align = 2

[node name="AmmoContainer" type="VBoxContainer" parent="HBoxContainer/RightContainer"]
margin_top = 542.0
margin_right = 638.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="AmmoLabel" type="Label" parent="HBoxContainer/RightContainer/AmmoContainer"]
margin_top = 500.0
margin_right = 638.0
margin_bottom = 538.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.866667, 1 )
text = "Ammo: 100"
align = 2

[node name="CrossHair" type="TextureRect" parent="."]
margin_right = 450.0
margin_bottom = 450.0
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
